--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*'  # Trigger on version tags (e.g., v1.0.0)
 
+concurrency:
+  group: publish-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,6 +37,36 @@ jobs:
     - name: Check distribution
       run: twine check dist/*
     
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: distributions
+        path: dist/
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      # This will require manual approval before deploying
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Download artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: distributions
+        path: dist/
+    
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+    
+    - name: Install dependencies
+      run: pip install twine
+    
     - name: Publish to PyPI
       env:
         TWINE_USERNAME: __token__
@@ -49,7 +83,7 @@ jobs:
         body: |
           # ToonStream ${{ github.ref }}
           
-          Token-Oriented Object Notation (TOON) - v1.0.0
+          Token-Oriented Object Notation (TOON)
           
           - 100% test coverage
           - 38-55% token reduction
@@ -59,6 +93,13 @@ jobs:
           See [RELEASE_NOTES_v1.0.0.md](https://github.com/vivekpandian08/toonstream/blob/main/RELEASE_NOTES_v1.0.0.md) for details.
         draft: false
         prerelease: false
+    
+    - name: Upload release assets
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Upload release assets
       uses: softprops/action-gh-release@v1
